[package]
name = "surrealdb_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
surrealdb = { version = "1.0.0-beta.9", features = ["kv-mem"] }
tokio = { version = "1.21.9", features = ["full"] }
